--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "url": "https://github.com/WaylonSong/reactCrud/issues"
   },
   "dependencies": {
-    "css-loader": "^0.25.0",
-    "file-loader": "^0.9.0",
     "react": "^0.14.8",
     "react-addons-transition-group": "^15.3.1",
     "react-bootstrap": "^0.30.3",
@@ -27,6 +25,14 @@
     "redux": "^3.2.1"
   },
   "devDependencies": {
+    "css-loader": "^0.25.0",
+    "file-loader": "^0.9.0",
+    "expose-loader": "^0.7.1",
+    "promise-loader": "^1.0.0",
+    "raw-loader": "^0.5.1",
+    "style-loader": "^0.13.0",
+    "text-loader": "0.0.1",
+    "url-loader": "^0.5.6",
     "babel-core": "^6.3.15",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
