--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "url": "https://github.com/WaylonSong/reactCrud/issues"
   },
   "dependencies": {
+    "expose": "^0.1.4",
     "react": "^0.14.8",
-    "react-addons-transition-group": "^15.3.1",
+    "react-addons-transition-group": "^0.14.0",
     "react-bootstrap": "^0.30.3",
     "react-dom": "^0.14.8",
     "react-redux": "^4.2.1",
     "reactstrap": "^2.6.1",
-    "redux": "^3.2.1"
+    "redux": "^3.2.1",
+    "style-loader": "^0.13.1"
   },
   "devDependencies": {
     "css-loader": "^0.25.0",
